@@ -9,13 +9,12 @@ import project.ottshare.dto.waitingUserDto.WaitingUserResponseDto;
 import project.ottshare.entity.User;
 import project.ottshare.entity.WaitingUser;
 import project.ottshare.enums.OttType;
-import project.ottshare.exception.OttLeaderNotFoundException;
-import project.ottshare.exception.OttNonLeaderNotFoundException;
 import project.ottshare.exception.UserNotFoundException;
 import project.ottshare.repository.UserRepository;
 import project.ottshare.repository.WaitingUserRepository;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -65,11 +64,9 @@ public class WaitingUserService {
     /**
      * 리더가 있는지 확인
      */
-    public WaitingUserResponseDto getLeaderByOtt(OttType ottType) {
-        WaitingUser waitingUser = waitingUserRepository.findByIsLeaderTrueAndOttType(ottType)
-                .orElseThrow(() -> new OttLeaderNotFoundException(ottType));
-
-        return WaitingUserResponseDto.from(waitingUser);
+    public Optional<WaitingUserResponseDto> getLeaderByOtt(OttType ottType) {
+        return waitingUserRepository.findByIsLeaderTrueAndOttType(ottType)
+                .map(WaitingUserResponseDto::from);
     }
 
 
@@ -77,22 +74,17 @@ public class WaitingUserService {
      * 리더가 아닌 user 가 모두 있는지 확인
      */
     public List<WaitingUserResponseDto> NonLeaderByOtt(OttType ottType) throws Exception {
-        int nonLeaderCount = getNonLeaderCountByOtt(ottType); //NETFLIX 들어옴 그럼 int 2 로 반환
-        List<WaitingUser> waitingUsers = waitingUserRepository.findByIsLeaderFalseAndOttType(ottType); //NETFLIX OttType찾기
+        int expected = getNonLeaderCountByOtt(ottType); //NETFLIX 들어옴 그럼 int 2 로 반환
+        List<WaitingUser> waitingUsers = waitingUserRepository.findByIsLeaderFalseAndOttType(ottType);
         //컨트롤러에서 3명이나 방을 못만들면 이제 WaitingUserRepository 에다 저장됨 그럼 계속 인원을 확인하는거임.
 
-        log.info("OttType 별 기대 인원수 : {}", nonLeaderCount);
+        log.info("OttType 별 기대 인원수 : {}", expected);
         log.info("현재 대기 유저 수 : {}", waitingUsers.size());
 
-        if (waitingUsers.size() != nonLeaderCount) {
-            throw new OttNonLeaderNotFoundException(ottType); //예외 처리하기 나중에
-        }
-
-        return waitingUsers.stream()
-                .map(WaitingUserResponseDto::from)
-                .collect(Collectors.toList());
+        return (waitingUsers.size() == expected)
+                ? waitingUsers.stream().map(WaitingUserResponseDto::from).toList()
+                : List.of(); // 인원 부족이면 빈 리스트
     }
-
     /**
      * 리더가 아닌 OttType 인원 확인
      */
